# SeatSync

./: .editorconfig  .firebaserc  .gitignore  ADVANCED_AI_IMPLEMENTATION.md  AWS_WAF_LIMITATION.md  COMPREHENSIVE_RESEARCH_ANALYSIS.md  COMPREHENSIVE_SCRAPING_RESEARCH.md  DEVELOPMENT_WORKAROUNDS.md  FIREBASE_DEPLOYMENT_GUIDE.md  FIREBASE_STUDIO_QUICK_START.md  FIREBASE_STUDIO_SETUP.md  FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MINNESOTA_TIMBERWOLVES_TEST_REPORT.md  QUICK_START.md  README.md  README_STREAMLIT.md  REFACTOR_COMPLETE.md  SCRAPING_FIX_DOCUMENTATION.md  SCRAPING_GUIDE.md  SCRAPING_STATUS.md  SCRAPLING_MIGRATION_GUIDE.md  SCRAPLING_QUICK_START.md  STUBHUB_AWS_WAF_FIX_SUMMARY.md  alembic.ini  capture_screenshots.py  database.rules.json  debug_stubhub.py  demo_direct_urls.py  demo_results_timberwolves.json  demonstrate_workflow.py  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  overview-starter.txt  pyproject.toml  railway-deployment-guide.md  railway.json  (+11 more)
.github/workflows/: ci.yml  (+1 more)
.idx/: QUICK_REFERENCE.md  README.md  dev.nix  validate-config.sh
alembic/: env.py
backend/: .env.test  Dockerfile  README.md  __init__.py  app.py  main.py  nixpacks.toml  pyproject.toml  requirements.txt  setup.py
cloud_function/: README.md  main.py
docs/: ADVANCED_BYPASS_IMPLEMENTATION.md  API_INTEGRATION_GUIDE.md  AWS_WAF_LIMITATION.md  BEFORE_AFTER.md  EVILWAF_SECURITY_ANALYSIS.md  EXECUTIVE_SUMMARY.md  FIREBASE_STUDIO_COMPLETE.md  IMPLEMENTATION_GUIDE.md  MARKETPLACE_INTEGRATION.md  MIGRATION_COMPLETE.md  MULTI_MARKETPLACE_SCRAPING.md  QUICK_REFERENCE.md  REFACTOR_SUMMARY.md  SCRAPING_FIX_SUMMARY.md  SCRAPING_SERVICE_V0.3_UPDATE.md  SCRAPING_UPDATE_SUMMARY.md  SCRAPLING_ANALYSIS.md  SCRAPLING_FIX_QUICK_REF.md  SCRAPLING_RECONSTRUCTION_COMPLETE.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_QUICK_REFERENCE.md  STREAMLIT_DELIVERY_SUMMARY.md  SYSTEM_BLUEPRINT.md  VISUAL_TEST_EVIDENCE.md  WINDOWS_ASYNCIO_FIX.md  WINDOWS_COMPATIBILITY_GUIDE.md
frontend/: dashboard.html  package-lock.json  package.json
(+69 files in other folders)
