[tool.poetry]
name = "seatsync-backend"
version = "1.0.0"
description = "AI-Powered Sports Ticket Portfolio Management Platform"
authors = ["SeatSync Team <dev@seatsync.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlalchemy = "2.0.41"
pydantic = {version = "2.11.7", extras = ["email"]}
pydantic-settings = "2.2.1"
python-dotenv = "1.0.1"
httpx = "0.25.2"
google-cloud-bigquery = "3.17.2"
google-genai = "0.3.0"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-jose = "3.3.0"
psycopg2-binary = "2.9.9"
requests = "2.31.0"
asyncpg = "0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.21.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 